# 6502

./: .gitignore  CMakeLists.txt  LICENSE  README.md
debugger/: CMakeLists.txt
debugger/include/: command.hpp  shell.hpp  string-utils.hpp
debugger/src/: main.c  main.cpp  shell.cpp  string-utils.cpp
include/spi/: debug.h  dll_export.h  error.h  program.h
include/spi/cpu/: bits.h  convert.h  cpu_6502.h  types.h
include/spi/opcode/: adc.h  and.h  arithmetic.h  asl.h  bcc.h  bcs.h  bitwise.h  comparator.h  cpu.h  flow-control.h  interrupt.h  memory.h  opcode.h  stack.h
src/: main.c
src/spi/: debug.c  error.c  program.c
src/spi/cpu/: cpu_6502.c
src/spi/opcode/: adc.c  and.c  arithmetic.c  asl.c  bcc.c  bcs.c  bitwise.c  comparator.c  cpu.c  flow-control.c  interrupt.c  memory.c  opcode.c  stack.c
tests/: CMakeLists.txt  prog  prog1.p65
tests/adc/: immediate
tests/arithmetic/: CMakeLists.txt
tests/arithmetic/include/: constants.h  test_adc.h
tests/arithmetic/src/: main.c  test_adc.c
tests/tools/: CMakeLists.txt
tests/tools/include/tools/: instruction.h
tests/tools/src/tools/: instruction.c
